force-app/main/default/objects/Competitor_Contract__c/Competitor_Contract__c.object-meta.xml
<CustomObject>
    <description>Used to register basic details of competitor contracts for an account.</description>
    <label>Competitor Contract</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Competitor Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>