force-app/main/default/objects/Competitor_Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account that has this competitor contract.</description>
    <inlineHelpText>The Account that has this competitor contract.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Contracts</relationshipLabel>
    <relationshipName>Competitor_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>