force-app/main/default/objects/Competitor_Contract__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Enter any comments for the competitor contract</description>
    <inlineHelpText>Enter any comments for the competitor contract</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>