force-app/main/default/objects/Competitor_Contract__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter a contact for the competitor contract</description>
    <inlineHelpText>Enter a contact for the competitor contract</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Competitor Contracts</relationshipLabel>
    <relationshipName>Competitor_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>