force-app/main/default/objects/Competitor_Contract__c/fields/Current_supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_supplier__c</fullName>
    <description>The supplier the customer chose instead of Telia.</description>
    <inlineHelpText>The supplier the customer chose instead of Telia.</inlineHelpText>
    <label>Current supplier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Dstny</fullName>
            </value>
            <value>
                <fullName>Flexphone</fullName>
            </value>
            <value>
                <fullName>Global Connect</fullName>
            </value>
            <value>
                <fullName>Ip-Nordic</fullName>
            </value>
            <value>
                <fullName>KLC</fullName>
            </value>
            <value>
                <fullName>Norlys</fullName>
            </value>
            <value>
                <fullName>Relatel</fullName>
            </value>
            <value>
                <fullName>TDC Erhverv</fullName>
            </value>
            <value>
                <fullName>Telavox</fullName>
            </value>
            <value>
                <fullName>Telenor</fullName>
            </value>
            <value>
                <fullName>Unitel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not disclosed</fullName>
            </value>
            <value>
                <fullName>TDC</fullName>
                <isActive>false</isActive>
                <label>TDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>