force-app/main/default/objects/Competitor_Contract__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date when the competitors contract is expected to end</description>
    <inlineHelpText>The date when the competitors contract is expected to end</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>