force-app/main/default/objects/Competitor_Contract__c/fields/has_Notification_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>has_Notification_Date_Passed__c</fullName>
    <description>Indicates if the Notification Date has passed.</description>
    <formula>Notification_Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Notification Date has passed.</inlineHelpText>
    <label>has Notification Date Passed?</label>
    <type>Checkbox</type>
</CustomField>