force-app/main/default/objects/Competitor_Contract__c/fields/is_Account_Manager_notified__c.field-meta.xml
<CustomField>
    <fullName>is_Account_Manager_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the Account Manager has been notified about the upcoming expiration of the competitor contract</description>
    <inlineHelpText>indicates if the Account Manager has been notified about the upcoming expiration of the competitor contract</inlineHelpText>
    <label>is Account Manager notified?</label>
    <type>Checkbox</type>
</CustomField>