force-app/main/default/objects/Competitor_Contract__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <description>The date when the Account Manager should be notified about an upcoming expiration date of a competitor contract.</description>
    <formula>ADDMONTHS( Expiration_Date__c , -7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date when the Account Manager should be notified about an upcoming expiration date of a competitor contract.</inlineHelpText>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>