force-app/main/default/objects/Competitor_Contract__c/fields/Number_of_Devices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Devices__c</fullName>
    <description>Number of devices (SIM, accesser, etc.)</description>
    <inlineHelpText>Number of devices (SIM, accesser, etc.)</inlineHelpText>
    <label>Number of Devices</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>