force-app/main/default/objects/Competitor_Contract__c/fields/Product_area__c.field-meta.xml
<CustomField>
    <fullName>Product_area__c</fullName>
    <description>The product area for the competitor contract</description>
    <inlineHelpText>Choose a product area.</inlineHelpText>
    <label>Product area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobil Voice</fullName>
            </value>
            <value>
                <fullName>Unified Communication</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>DataNet &amp; MPLS</fullName>
            </value>
            <value>
                <fullName>HomeOffice</fullName>
            </value>
            <value>
                <fullName>Fleet Management</fullName>
            </value>
            <value>
                <fullName>IoT Connectivity</fullName>
            </value>
            <value>
                <fullName>SD Wan</fullName>
            </value>
            <value>
                <fullName>DDOS</fullName>
            </value>
            <value>
                <fullName>Device as a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>