force-app/main/default/objects/Competitor_Contract__c/listViews/My_Competitor_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Competitor_Contracts</fullName>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Current_supplier__c</columns>
    <columns>Product_area__c</columns>
    <columns>Number_of_Devices__c</columns>
    <columns>Comments__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Competitor Contracts</label>
</ListView>